RegressionTests/TestSuiteExport/reject/expected_expression.blade
// EXPECT: fail
// DIAGNOSTICS: E0102

cog var x: u32 = ;